--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,16 +46,11 @@
                {% include menu-header.html %}
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
-                {% include search-lunr.html %}
+                <!-- Searchbar-placeholder -->
             </ul>
         </div>
     </div>
     </nav>
-
-    <!-- Search Results -->
-    <div id="lunrsearchresults">
-        <ul class="mb-0"></ul>
-    </div>
 
     <!-- Content -->
     <main role="main" class="site-content">
