--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,6 +4,6 @@
 <a class="nav-link" href="{{site.baseurl}}/>Home</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="https://app.timecamp.com/content/n2hbzmnq">Free Time Tracking App</a> rel=nofollow
+<a class="nav-link" href="https://app.timecamp.com/content/n2hbzmnq">Free Time Tracking App</a>
 </li>
 </li>
