--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 <!-- Searchbar-placeholder -->
+                % include search-lunr.html %}
             </ul>
         </div>
     </div>
