--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
             </ul>
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 <!-- Searchbar-placeholder -->
-                % include search-lunr.html %}
+               {% include search-lunr.html %}
             </ul>
         </div>
     </div>
@@ -73,14 +73,13 @@
         <div class="row align-items-center justify-content-between">
             <div>
                 <span class="navbar-brand mr-2 mb-0"><strong>GetFreelancy.com</strong></span>
-                <span>Copyright @ 2020</span>
+                <span>Copyright @ 2021</span>
 
             </div>
         </div>
         </div>
     </footer>
 
-    {% include tracking-footer.html %}
 </body>
 
 </html>
